# PokerStacker

./: .gitignore  CMakeLists.txt  README.md  common.cpp  common.h  database.cpp  database.h  init_db.sql  main.cpp  mybot.cpp  mybot.h  player.cpp  player.h  pot.cpp  pot.h  room.cpp  room.h
src/: common.cpp  database.cpp  main.cpp  mybot.cpp  player.cpp  pot.cpp  room.cpp
src/headers/: mybot.h  room.h
